tests/negative/traits/duplicate_empty.orng
impl for Int {
    fn f(self) -> Int { self }
}

impl for Int {
    fn g(&self) -> Int { self^ }
}